# kutinf-beadando

./: CMakeLists.txt  teszt.txt
CXX/: CMakeLists.txt  main.cpp
doc/: Jegyzőkönyv.docx  Program működése.docx
plot/: CMakeLists.txt  plot.plt
